Background Colors in Misc->New Document Color and Backgrounds of all Calandars in Reports Tab. Odd background colors in Administration Buttons Alignment in Procedures->Requirements Background color fixes in Patient Tabs.

--- a/interface/themes/bootstrap/sass/style_bootstrap.scss
+++ b/interface/themes/bootstrap/sass/style_bootstrap.scss
@@ -762,11 +762,12 @@ div.notab-right {
 #report_results table th {
   border-bottom: 1px solid black;
   padding: 5px;
+  font-size: 12px;
 }
 #report_results table td {
   padding: 5px;
   border-bottom: 1px dashed;
-  font-size: 0.8em;
+  font-size: 12px;
 }
 .report_totals td {
   background-color: #77ff77;
@@ -1204,7 +1205,7 @@ form[name="demographics_form"] input[type="entry"]{
     width: auto;
 }
 .dataTable th{
-    background: #eee;
+    background: #fff;
 }
 .btn-primary:hover, .link_submit:hover, .link_selected:hover, .link:hover, .btn-custom:hover, .css_button_small:hover, #showMenuLink:hover, .css_button:hover, .css_button_link a:hover, .small a:hover, .nav-pills-sm li.active a:hover, .nav-pills-sm li.current a:hover, .nav-pills-sm li:hover a:hover, .tabNav a:hover, input[type="button"]:hover, .iframe.medium_modal:hover, .btn-submit:hover, .btn-green:hover, input[type="submit"]:hover, #div_acl_add_form .button_acl_add:hover, .confirguration #con0 .col5 span:hover, .btn-primary:focus, .link_submit:focus, .link_selected:focus, .link:focus, .btn-custom:focus, .css_button_small:focus, #showMenuLink:focus, .css_button:focus, .css_button_link a:focus, .small a:focus, .nav-pills-sm li.active a:focus, .nav-pills-sm li.current a:focus, .nav-pills-sm li:hover a:focus, .tabNav a:focus, input[type="button"]:focus, .iframe.medium_modal:focus, .btn-submit:focus, .btn-green:focus, input[type="submit"]:focus, #div_acl_add_form .button_acl_add:focus, .confirguration #con0 .col5 span:focus{
     background-position: 0;
@@ -1540,7 +1541,7 @@ tr.tableHead-bg td img,
     color: #333;    
     border-color: #ddd;
     display: block !important;
-    background-color: $solidgreen;
+    background-color: $silverColor;
 }
 #objTreeMenu_1_node_1_7_1,
 #objTreeMenu_1_node_1_7_2,
@@ -1562,7 +1563,6 @@ div.tabContainer div.tab,
     width: 100% !important;
 }
 .tableBilling td,
-.tableBatchPayments td,
 .eraPosting tr{
     background: $silverColor !important;
 }
@@ -1620,7 +1620,7 @@ div.tabContainer div.tab,
 }
 .loadCompendium,
 #pt_table_wrapper .dataTable{
-    background: $silverColor;
+    background: #fff;
 }
 .pager span,
 .dataTables_paginate{
@@ -1662,15 +1662,15 @@ input[type="textbox"]{
     color: #000;
 }
 .calendar thead .title{
-    border: 1px solid #BBECA7;
-    background: $solidgreen !important;
+    border: 1px solid darken($silverColor, 20%);
+    background: $silverColor !important;
 }
 .calendar .button,
 .rowhilite td{
-    background: $lightgreen !important;
+    background: $silverColor !important;
 }
 .calendar table{
-    background: $solidgreen !important;
+    background: $silverColor !important;
 }
 .calendar table .wn,
 .calendar thead .name,
@@ -1740,7 +1740,7 @@ div#groupdetail select{
     margin: 10px 0;
 }
 .odd td {
-    background-color: rgb(251, 251, 251) !important;
+    background-color: #fff !important;
 }
 .even td {
     background-color: $silverColor !important;
@@ -1761,4 +1761,11 @@ tr.head {
 }
 #datePicker .tdMonthName-small{
     background: $silverColor !important;
+}
+#overDiv table,
+#overDiv table table{
+    background: $silverColor !important;
+}
+tr.search.no-bg input {
+    margin-bottom: 15px;
 }
